Fix overlapping text photo in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body{
     font-family: Ubuntu;
+    padding: auto;
 }
 
 .contentcontainer{
@@ -9,7 +10,6 @@ body{
 /*header*/
 .header{
     display: flex;
-
     background-color: #1f2937;
     color: #f9faf8;
     padding: 20px 350px;
@@ -18,7 +18,6 @@ body{
 .headerlogo{
     font-size: 24px;
     font-weight: bold;
-
 }
 
 .headerlinks{
@@ -34,27 +33,24 @@ body{
     display: flex; 
     color: #f9faf8;
     background-color: #1f2937;
-    padding: 40px 350px;
     padding-bottom: 60px;
     gap: 150px;
+    justify-content: center;
 }
 
 .herotext{
     display: flex; 
-    flex: 1 1 0;
-    width: 0;
     flex-direction: column;
     min-width: 309px;
-    max-width: 700px;
-
+    max-width: 350px;
 }
 
 .herophoto{
     display: flex; 
-    flex: 1;
+    max-width:100%;
+    height:auto;
     justify-content: flex-end;
     align-items: center;
-
 }
 
 #heromain{
@@ -64,8 +60,7 @@ body{
 
 img{
     display: flex;
-    max-width:100%;
-    height:auto;
+    flex: 1;
     border-radius: 20px;
 }
 
@@ -85,13 +80,12 @@ p{
     border-style: solid;
     font-family: Ubuntu, Oxygen;
     font-size: 18px;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 /*information section*/
 .information{
     display: flex;
-    padding: 40px 350px;
     flex-direction: column;
     align-items: center;
 }
@@ -106,7 +100,7 @@ p{
 }
 
 .caption{
-    margin-top: 10px;
+    margin: 10px 0;
     text-align: center;
     font-weight: 300;
 }
@@ -147,7 +141,6 @@ p{
     margin: 60px auto;
     gap: 100px;
     align-items: center;
-    
 }
 
 .calltextcontainer{
@@ -183,7 +176,6 @@ h2,p{
 a{
     text-decoration: none;
     color: #e5e7eb;
-
 }
 
 
